// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoteImage should render ipfs sources 1`] = `
<View
  source={
    {
      "uri": "ipfs://QmeE94srcYV9WwJb1p42eM4zncdLUai2N9zmMxxukoEQ23",
    }
  }
/>
`;

exports[`RemoteImage should render static sources 1`] = `
<MockedExpoImage
  onError={[Function]}
  onLoad={[Function]}
  source={
    {
      "uri": "https://s3.amazonaws.com/airswap-token-images/OXT.png",
    }
  }
/>
`;

exports[`RemoteImage should render svg correctly 1`] = `
<MockedExpoImage
  onError={[Function]}
  onLoad={[Function]}
  source={
    {
      "uri": "https://raw.githubusercontent.com/MetaMask/contract-metadata/master/images/dai.svg",
    }
  }
/>
`;

exports[`RemoteImage should render with Solana network badge when on Solana network 1`] = `
<View
  useNativeDriver={true}
>
  <View
    onLayout={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
    testID="badge-wrapper-badge"
  >
    <View>
      <View>
        <View
          fadeIn={true}
          isTokenImage={true}
          source={
            {
              "uri": "ipfs://QmeE94srcYV9WwJb1p42eM4zncdLUai2N9zmMxxukoEQ23",
            }
          }
          style={
            {
              "borderRadius": 8,
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "bottom": 5,
          "position": "absolute",
          "right": 5,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={{}}
        testID="badgenetwork"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#f3f5f9",
              "borderColor": "#ffffff",
              "borderRadius": 8,
              "borderWidth": 1,
              "height": 16,
              "justifyContent": "center",
              "overflow": "hidden",
              "shadowColor": "#0000001a",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 4,
              "width": 16,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 10,
                "letterSpacing": 0,
                "lineHeight": undefined,
              }
            }
          >
            S
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      {
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        [
          {},
          {
            "backgroundColor": "#eee",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
